gcc/testsuite/rust/rustc/ui/const-generics/adt_const_params/const_param_ty_generic_bounds_do_not_hold_dg.rs
#![allow(incomplete_features)]
#![feature(adt_const_params, unsized_const_params)]

#[derive(PartialEq, Eq)]
struct NotParam;

fn check<T: std::marker::UnsizedConstParamTy + ?Sized>() {}

fn main() {
    check::<&NotParam>(); // { dg-error ".E0277." "" { target *-*-* } }
    check::<[NotParam]>(); // { dg-error ".E0277." "" { target *-*-* } }
    check::<[NotParam; 17]>(); // { dg-error ".E0277." "" { target *-*-* } }
}

